--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id image %>">
   <div>
-    <%= image.category.titleize %> - <%= image.caption.titleize %>
+    <strong><%= image.category.titleize %>:</strong> <%= image.caption %>
   </div>
   <img
     class="max-width-60"
