add prettify methods to match desired reponse

--- a/app/views/hotels/_hotel.html.erb
+++ b/app/views/hotels/_hotel.html.erb
@@ -31,7 +31,7 @@
       <tr>
         <th class="top-align">Images:</th>
         <td>
-          <% prettify_images.each do |image| %>
+          <% sort_images.each do |image| %>
             <%= render image %>
           <% end %>
         </td>
