reduce query count by using eager_load and in-memory checks

--- a/app/views/hotels/_data_form.html.erb
+++ b/app/views/hotels/_data_form.html.erb
@@ -27,7 +27,7 @@
 
   <div>
     <%= form.button "Load from snapshot", formaction: hotels_load_snapshot_path %>
-    <% if Hotel.count > 0 %>
+    <% if @hotels.any? %>
       <%= form.button "Delete all records", formaction: hotels_destroy_all_path %>
     <% end %>
   </div>
